--- a/vercel.json
+++ b/vercel.json
@@ -1,28 +1,8 @@
 {
-    "version": 2,
-    "builds": [
-        {
-            "src": "frontend/package.json",
-            "use": "@vercel/static-build",
-            "config": {
-                "distDir": "dist"
-            }
-        }
-    ],
-    "routes": [
-        {
-            "src": "/api/(.*)",
-            "dest": "https://image-pipeline-api.onrender.com/api/$1"
-        },
-        {
-            "src": "/(.*)",
-            "dest": "/frontend/$1"
-        }
-    ],
     "rewrites": [
         {
-            "source": "/(.*)",
-            "destination": "/index.html"
+            "source": "/api/:path*",
+            "destination": "https://image-pipeline-review-system.onrender.com/api/:path*"
         }
     ]
 }
