rebrand: Rename to Catalyze - Image Review Platform
- Update index.html title and meta
- Update Login page branding
- Update Register page branding
- Update VendorDashboard header to 'Catalyze | Vendor'
- Update ReviewQueue header to 'Catalyze | Reviewer'
- Update FastAPI app title and description
- Update startup messages
- Update render.yaml service name
- Complete README rewrite with Catalyze branding

--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@
 
 services:
   - type: web
-    name: image-pipeline-api
+    name: catalyze-api
     runtime: python
     region: oregon
     plan: free
